# simpleoverlay

./: README.md
simpleoverlay/: gstsimpleoverlay.c  gstsimpleoverlay.h  meson.build  plugin.c
simpleoverlay/fonts/: times_new_roman_12.h
